--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javacript Quiz</title>
+    <title>LC's Java Quiz</title>
+<!--Links Boostrap & CSS-->
+    <link rel="stylesheet" type="text.css" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> 
+
 </head>
 <body>
-    <div id="quiz"></div>
-    <button id="submit">Get Results</button>
-    <div id="results"></div>
-
+    <!--Navs-->
+    <nav class="navbar navbar-expand-md fixed-top">
+        <div class="container-fluid">
+              <div id="highscore" class="nav-item nav-link"> View High Scores</div>
+              <h1 id="navbar-title">LC's Javacript Quiz</h1>
+              <table id=timers style="visibility: hidden;">
+                <tr>
+                  <td> Time left in Game: </td>
+                  <td> <span id="gameTimer" class="nav-item"></span> </td>
+                </tr>
+                 <tr>
+                  <td>Time left for Question:</td>
+                  <td> <span id="quesTimer" class="nav-item"></span> </td>
+                </tr>
+              </table>
+          </div>
+        </div>
+      </nav>
+      <nav class="navbar fixed-bottom footer">
+        <div class="footer-text">LC's Javacript Quiz 2020</div>
+    </nav>
+<!--Scripts-->
+    <script src="assets/index.js assets/highscore.js assets/questions.js"></script>
 </body>
 </html>
