--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="jquery-3.5.1.min.js"></script>
+    
     <title>LC's Java Quiz</title>
 <!--Links Boostrap & CSS-->
-    <link rel="stylesheet" type="text.css" href="assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> 
 
 </head>
@@ -28,10 +31,15 @@
           </div>
         </div>
       </nav>
+      <div class="container-fluid">
+          <section id="details"></section>
+      </div>
       <nav class="navbar fixed-bottom footer">
         <div class="footer-text">LC's Javacript Quiz 2020</div>
     </nav>
 <!--Scripts-->
-    <script src="assets/index.js assets/highscore.js assets/questions.js"></script>
+    <script src="assets/script.js"></script>
+    <script src= "assets/highscore.js"></script>
+    <script src="assets/questions.js"></script>
 </body>
 </html>
